--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -16,7 +16,7 @@
                     <a href="retalhistas">Retalhistas</a>
                 </li>
                 <li style="padding: 0 10px;">
-                    <a href="eventos de reposição">Evento de Reposição</a>
+                    <a href="escolhe_ivm">Ver eventos de Reposição por ivm</a>
                 </li>
             </ul>
 </body>
