--- a/web/templates/retalhistas.html
+++ b/web/templates/retalhistas.html
@@ -23,7 +23,7 @@
                 </tr>
             {% endfor %}
             <tr>
-                <td><a href="Adicionar_retalhista">Adicionar Retalhista</a></td>
+                <td><a href="Inserir_retalhista">Adicionar Retalhista</a></td>
             </tr>
         </tbody>
     </table>
