some final finally update 5.C

--- a/web/templates/lista_er.html
+++ b/web/templates/lista_er.html
@@ -5,7 +5,7 @@
     <title>Lista Eventos de Reposição</title>
 </head>
 <body style="padding:20px">
-    <h3>Eventos de Reposição do IVM {{ params.get("ivm") }}</h3>
+    <h3>Eventos de Reposição do IVM {{ ivm }}</h3>
 {% if cursor %}
     <table border="2px">
         <thead>
