--- a/web/templates/super_categoria.html
+++ b/web/templates/super_categoria.html
@@ -2,15 +2,17 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Change balance - Flask</title>
+    <title>Super-Categorias</title>
 </head>
 <body>
-        <h3>Alterar saldo da conta {{ params.get("account_number") }}</h3>
-    <form action="update" method="post">
-        <p><input type="hidden" name="account_number" value="{{
-params.get('account_number') }}"/></p>
-        <p>Novo saldo: <input type="text" name="balance"/></p>
-        <p><input type="submit" value="Submit"/></p>
-    </form>
+        <h3>Escolher Super-Categoria</h3>
+        <form action="selecionar_categoria" method="post">
+            <select name="ivm" id="ivm">
+                {% for record in cursor %}
+                    <option value="{{ record[0] }}">{{ record[0] }}</option>
+                {% endfor %}
+            </select>
+            <p><input type="submit" value="Confirmar"/></p>
+        </form>
 </body>
 </html>
