--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -10,7 +10,7 @@
                     <a href="categorias">Categorias</a>
                 </li>
                 <li style="padding: 0 10px;">
-                    <a href="supercategorias">Super-Categorias</a>
+                    <a href="escolhe_categoria">Super-Categorias</a>
                 </li>
                 <li style="padding: 0 10px;">
                     <a href="retalhistas">Retalhistas</a>
