5.D some changes in html titles

--- a/web/templates/eliminar_categoria.html
+++ b/web/templates/eliminar_categoria.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Change balance - Flask</title>
+    <title>Eliminar Categoria</title>
 </head>
 <body>
     <h3>Eliminar Categoria {{ params.get("categoria") }}</h3>
