--- a/web/templates/lista_sub_categorias.html
+++ b/web/templates/lista_sub_categorias.html
@@ -10,7 +10,7 @@
     <table border="2px">
         <thead>
             <tr>
-                <th>Nome</th>
+                <th>Sub-categorias</th>
             </tr>
         </thead>
         <tbody>
