--- a/web/templates/eliminar_retalhista.html
+++ b/web/templates/eliminar_retalhista.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Change balance - Flask</title>
+    <title>Eliminar Retalhista</title>
 </head>
 <body>
     <h3>Eliminar Categoria {{ params.get("retalhista") }}</h3>
