--- a/web/templates/inserir_categoria.html
+++ b/web/templates/inserir_categoria.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Adicionar Categoria - Flask</title>
+    <title>Adicionar Categoria</title>
 </head>
 <body>
         <h3>Adicionar nova Categoria</h3>
