--- a/web/templates/ivm.html
+++ b/web/templates/ivm.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Listar eventos de reposição</title>
+    <title>Escolher IVM</title>
 </head>
 <body>
     {% if cursor %}
