--- a/web/templates/lista_er.html
+++ b/web/templates/lista_er.html
@@ -20,7 +20,7 @@
             </tr>
         </thead>
         <tbody>
-            {% for record in cursor %}
+            {% for record in cursor1 %}
                 <tr>
                     <td>{{ record[0] }}</td>
                     <td>{{ record[1] }}</td>
@@ -41,7 +41,7 @@
             </tr>
         </thead>
         <tbody>
-            {% for record in cursor %}
+            {% for record in cursor2 %}
                 <tr>
                     <td>{{ record[0] }}</td>
                     <td>{{ record[1] }}</td>
