--- a/web/templates/lista_er.html
+++ b/web/templates/lista_er.html
@@ -6,7 +6,7 @@
 </head>
 <body style="padding:20px">
     <h3>Eventos de Reposição do IVM {{ ivm }}</h3>
-{% if cursor %}
+{% if cursor1 and cursor2 %}
     <table border="2px">
         <thead>
             <tr>
