5.C more chages again

--- a/web/templates/lista_er.html
+++ b/web/templates/lista_er.html
@@ -34,6 +34,7 @@
         </tbody>
     </table>
     <p></p>
+    <h3>Unidades repostas por categoria da IVM {{ ivm }}</h3>
     <table border="2px">
         <thead>
             <tr>
