--- a/web/templates/eliminar_retalhista.html
+++ b/web/templates/eliminar_retalhista.html
@@ -5,7 +5,7 @@
     <title>Eliminar Retalhista</title>
 </head>
 <body>
-    <h3>Eliminar Categoria {{ params.get("retalhista") }}</h3>
+    <h3>Eliminar Retalhista {{ params.get("retalhista") }}</h3>
     <form action="delete_retalhista" method="post">
         <p><input type="hidden" name="retalhista" value="{{params.get('retalhista') }}"/></p>
         <p><input type="submit" value="Confirmar"/></p>
