--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Home </title>
+<title>Início</title>
 </head>
 <body style="padding:20px">
         <ul style="display: flex; align-items: center; list-style: none;">
