--- a/web/templates/ivm.html
+++ b/web/templates/ivm.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     {% if cursor %}
-    <h3>Listar Eventos de Reposição</h3>
+    <h3>Listar eventos de reposição</h3>
     <form action="selecionar_ivm" method="post">
         <select name="ivm" id="ivm">
             {% for record in cursor %}
