--- a/web/templates/lista_er.html
+++ b/web/templates/lista_er.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Lista Eventos de Reposição</title>
+    <title>Listar eventos de reposição</title>
 </head>
 <body style="padding:20px">
     <h3>Eventos de Reposição do IVM {{ ivm }}</h3>
