--- a/web/templates/lista_sub_categorias.html
+++ b/web/templates/lista_sub_categorias.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Lista Sub_categorias</title>
+    <title>Listar sub-categorias</title>
 </head>
 <body style="padding:20px">
 {% if cursor %}
