Bla bla bla whiskas saquetas

--- a/web/templates/inserir_retalhista.html
+++ b/web/templates/inserir_retalhista.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Adicionar Retalhista</title>
+    <title>Adicionar retalhista</title>
 </head>
 <body>
-        <h3>Adicionar novo Retalhista</h3>
+        <h3>Adicionar novo retalhista</h3>
     <form action="insert_retalhista" method="post">
         <p>TIN: <input type="number" name="tin"/></p>
         <p>Nome Completo: <input type="text" name="nome"/></p>
