--- a/web/templates/inserir_sub_categoria.html
+++ b/web/templates/inserir_sub_categoria.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Adicionar Categoria</title>
+    <title>Adicionar subcategoria</title>
 </head>
 <body>
-        <h3>Adicionar sub-categoria a {{ params.get("categoria") }}</h3>
+        <h3>Adicionar subcategoria a {{ params.get("categoria") }}</h3>
     <form action="inserir_sub_categoria" method="post">
         <p><input type="hidden" name="super_categoria" value="{{params.get('categoria') }}"/></p>
         <p>Nova Categoria: <input type="text" name="categoria"/></p>
