--- a/web/templates/eliminar_retalhista.html
+++ b/web/templates/eliminar_retalhista.html
@@ -10,5 +10,6 @@
         <p><input type="hidden" name="retalhista" value="{{params.get('retalhista') }}"/></p>
         <p><input type="submit" value="Confirmar"/></p>
     </form>
+    <button href="/" type="button">Menu inicial</button>
 </body>
 </html>
