--- a/web/templates/error.html
+++ b/web/templates/error.html
@@ -7,5 +7,6 @@
 <body>
   <h1>The following error occurred:</h1>
   <p>{{ error_message }}</p>
+  <button href="/" type="button">Menu inicial</button>
 </body>
 </html>
