--- a/web/templates/inserir_retalhista.html
+++ b/web/templates/inserir_retalhista.html
@@ -11,5 +11,6 @@
         <p>Nome Completo: <input type="text" name="nome"/></p>
         <p><input type="submit" value="Submit"/></p>
     </form>
+    <button href="/" type="button">Menu inicial</button>
 </body>
 </html>
