--- a/web/templates/inserir_sub_categoria.html
+++ b/web/templates/inserir_sub_categoria.html
@@ -11,5 +11,6 @@
         <p>Nova Categoria: <input type="text" name="categoria"/></p>
         <p><input type="submit" value="Submit"/></p>
     </form>
+    <button href="/" type="button">Menu inicial</button>
 </body>
 </html>
