--- a/web/templates/ivm.html
+++ b/web/templates/ivm.html
@@ -18,5 +18,6 @@
     {% else %}
     <p> Erro: não foi possível obter dados da base de dados!</p>
 {% endif %}
+<button href="/" type="button">Menu inicial</button>
 </body>
 </html>
