--- a/web/templates/super_categoria.html
+++ b/web/templates/super_categoria.html
@@ -14,5 +14,6 @@
             </select>
             <p><input type="submit" value="Confirmar"/></p>
         </form>
+        <button href="/" type="button">Menu inicial</button>
 </body>
 </html>
