voltar ao menu inicial

--- a/web/templates/eliminar_categoria.html
+++ b/web/templates/eliminar_categoria.html
@@ -10,6 +10,6 @@
         <p><input type="hidden" name="categoria" value="{{params.get('categoria') }}"/></p>
         <p><input type="submit" value="Confirmar"/></p>
     </form>
-    <button href="/" type="button">Menu inicial</button>
+    <a href="home">Menu Inicial </a>
 </body>
 </html>
