--- a/web/templates/lista_sub_categorias.html
+++ b/web/templates/lista_sub_categorias.html
@@ -24,5 +24,8 @@
 {% else %}
     <p> Erro: não foi possível obter dados da base de dados!</p>
 {% endif %}
+<p></p>
+<p></p>
+<a href="home">Menu Inicial </a>
 </body>
 </html>
