--- a/web/templates/categorias.html
+++ b/web/templates/categorias.html
@@ -30,6 +30,6 @@
 {% else %}
     <p> Erro: não foi possível obter dados da base de dados!</p>
 {% endif %}
-<button href="/" type="button">Menu inicial</button>
+<a href="home">Menu Inicial </a>
 </body>
 </html>
