--- a/web/templates/eliminar_retalhista.html
+++ b/web/templates/eliminar_retalhista.html
@@ -10,6 +10,6 @@
         <p><input type="hidden" name="retalhista" value="{{params.get('retalhista') }}"/></p>
         <p><input type="submit" value="Confirmar"/></p>
     </form>
-    <a href="home">Menu Inicial </a>
+    <a href="/">Menu Inicial </a>
 </body>
 </html>
