--- a/web/templates/super_categoria.html
+++ b/web/templates/super_categoria.html
@@ -14,6 +14,6 @@
             </select>
             <p><input type="submit" value="Confirmar"/></p>
         </form>
-        <a href="home">Menu Inicial </a>
+        <a href="/">Menu Inicial </a>
 </body>
 </html>
