--- a/web/templates/retalhistas.html
+++ b/web/templates/retalhistas.html
@@ -30,6 +30,6 @@
 {% else %}
     <p> Erro: não foi possível obter dados da base de dados!</p>
 {% endif %}
-<a href="home">Menu Inicial </a>
+<a href="/">Menu Inicial </a>
 </body>
 </html>
