--- a/web/templates/inserir_categoria.html
+++ b/web/templates/inserir_categoria.html
@@ -10,6 +10,6 @@
         <p>Nova Categoria: <input type="text" name="categoria"/></p>
         <p><input type="submit" value="Submit"/></p>
     </form>
-    <a href="/">Menu Inicial </a>
+    <a href="">Menu Inicial </a>
 </body>
 </html>
