--- a/web/templates/ivm.html
+++ b/web/templates/ivm.html
@@ -18,6 +18,6 @@
     {% else %}
     <p> Erro: não foi possível obter dados da base de dados!</p>
 {% endif %}
-<a href="/">Menu Inicial </a>
+<a href="">Menu Inicial </a>
 </body>
 </html>
