--- a/web/templates/error.html
+++ b/web/templates/error.html
@@ -7,6 +7,6 @@
 <body>
   <h1>The following error occurred:</h1>
   <p>{{ error_message }}</p>
-  <a href="/">Menu Inicial </a>
+  <a href="">Menu Inicial </a>
 </body>
 </html>
