--- a/web/templates/categorias.html
+++ b/web/templates/categorias.html
@@ -30,6 +30,8 @@
 {% else %}
     <p> Erro: não foi possível obter dados da base de dados!</p>
 {% endif %}
-<a href="">Menu Inicial </a>
+<form> 
+    <input type="button" value="Voltar" onClick="history.go(-1)"> 
+</form>
 </body>
 </html>
