finally voltar feito we hope?

--- a/web/templates/eliminar_retalhista.html
+++ b/web/templates/eliminar_retalhista.html
@@ -10,6 +10,10 @@
         <p><input type="hidden" name="retalhista" value="{{params.get('retalhista') }}"/></p>
         <p><input type="submit" value="Confirmar"/></p>
     </form>
-    <a href="">Menu Inicial </a>
+    <p></p>
+    <p></p>
+    <form> 
+        <input type="button" value="Voltar" onClick="history.go(-1)"> 
+    </form>
 </body>
 </html>
