--- a/web/templates/super_categoria.html
+++ b/web/templates/super_categoria.html
@@ -14,6 +14,10 @@
             </select>
             <p><input type="submit" value="Confirmar"/></p>
         </form>
-        <a href="">Menu Inicial </a>
+        <p></p>
+        <p></p>
+        <form> 
+            <input type="button" value="Voltar" onClick="history.go(-1)"> 
+        </form>
 </body>
 </html>
