--- a/web/templates/error.html
+++ b/web/templates/error.html
@@ -7,6 +7,10 @@
 <body>
   <h1>The following error occurred:</h1>
   <p>{{ error_message }}</p>
-  <a href="">Menu Inicial </a>
+  <p></p>
+  <p></p>
+  <form> 
+    <input type="button" value="Voltar" onClick="history.go(-1)"> 
+</form>
 </body>
 </html>
